# WasmCL

./: .gitignore  CMakeLists.txt  README.md  hash.c  hash.h  hellocl.c  main.c  mem.c  mem.h  wrap.c  wrap.h
examples/: add.c  add.cl  add_numbers.c  cc-win.bat  cc.sh  hello.c  hellocl.c  spirv_kernel.c  square.c  square.cl
wasm-parser-c/: Cargo.toml
wasm-parser-c/src/: lib.rs
